css產品介紹按鈕調整及加入html語意化標籤

--- a/product.html
+++ b/product.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-	<section id="intro">
+	<header>
 		<nav class="navbar navbar-expand-md navbar-light">
 			<div class="container-fluid">
 				<a class="navbar-brand" href="index.html">
@@ -45,38 +45,36 @@
 				</div>
 			</div>
 		</nav>
-	</section>
+	</header>
 
 	<section id="second">
 		<div class="w3-display-container ">
 			<img src="images\product.jpg" class="img-fluid" alt="龍品快餐店" width="100%">
 			<div class="w3-display-middle">
-				<p class="title">產品介紹</p>
-				<p>傳統滷肉搭配各種主餐，讓您回味無窮</p>
+				<h1>產品介紹</h1>
+				<h4>傳統滷肉搭配各種主餐，讓您回味無窮</h4>
 			</div>
 		</div>
 	</section>
 
 	<div style="background-image: url('images/bg.jpeg');">
-		<section id="third">
-			<div class="container-fuild">
-				<div class="row justify-content-center button-group1">
-					<a class="btn btn-blue align-self-center" href="#a1">魯肉便當</a>
-					<a class="btn  btn-green" href="#a2">特製便當</a>
-					<a class="btn  btn-orange" href="#a3">花枝捲飯</a>
-					<a class="btn  btn-red" href="#a4">蝦捲飯</a>
-					<a class="btn  btn-maroon" href="#a5">滷排骨飯</a>
-					<a class="btn  btn-fuchsia" href="#a6">炸雞腿飯</a></div>
-				<div class="row justify-content-center button-group2">
-					<a class="btn  btn-indigo" href="#a7">鱈魚飯</a>
-					<a class="btn  btn-saddlebrown" href="#a8">炸排骨飯</a>
-					<a class="btn  btn-chocolate" href="#a9">香雞排飯</a>
-					<a class="btn  btn-gold" href="#a10">雙捲飯</a>
-					<a class="btn  btn-darkolivegreen" href="#a11">三寶飯</a>
-					<a class="btn  btn-royalblue" href="#a12">招牌飯</a>
-				</div>
+		<nav id="third" class="container-fuild">
+			<div class="row justify-content-center button-group1">
+				<a class="btn btn-blue align-self-center" href="#a1">魯肉便當</a>
+				<a class="btn  btn-green" href="#a2">特製便當</a>
+				<a class="btn  btn-orange" href="#a3">花枝捲飯</a>
+				<a class="btn  btn-red" href="#a4">蝦捲飯</a>
+				<a class="btn  btn-maroon" href="#a5">滷排骨飯</a>
+				<a class="btn  btn-fuchsia" href="#a6">炸雞腿飯</a></div>
+			<div class="row justify-content-center button-group2">
+				<a class="btn  btn-indigo" href="#a7">鱈魚飯</a>
+				<a class="btn  btn-saddlebrown" href="#a8">炸排骨飯</a>
+				<a class="btn  btn-chocolate" href="#a9">香雞排飯</a>
+				<a class="btn  btn-gold" href="#a10">雙捲飯</a>
+				<a class="btn  btn-darkolivegreen" href="#a11">三寶飯</a>
+				<a class="btn  btn-royalblue" href="#a12">招牌飯</a>
 			</div>
-		</section>
+		</nav>
 
 		<section id="fourth">
 			<div class="container" id="a1">
@@ -226,26 +224,25 @@
 		</section>
 	</div>
 
-	<section id="index-latest">
-		<footer>
-			<div class="container">
-				<div class="row">
-					<div class="col-4">
-						<p>連結</p>
-						<div class="btn-group-vertical">
-							<a href="index.html">關於龍品</a>
-							<a href="product.html">產品介紹</a>
-							<a href="booking.html">線上訂餐</a>
-						</div>
+	<footer>
+		<div class="container">
+			<div class="row">
+				<nav class="col-4">
+					<p>連結</p>
+					<div class="btn-group-vertical">
+						<a href="index.html">關於龍品</a>
+						<a href="product.html">產品介紹</a>
+						<a href="booking.html">線上訂餐</a>
 					</div>
-					<div class="col">
-						<p>聯絡我們</p>
-						<p>台中市北區北平路二段68之1號<br>tel:(04)2291-8106</p>
-					</div>
+				</nav>
+				<div class="col">
+					<p>聯絡我們</p>
+					<p>台中市北區北平路二段68之1號<br>tel:(04)2291-8106</p>
 				</div>
 			</div>
-		</footer>
-	</section>
+		</div>
+	</footer>
+
 </body>
 
 </html>
