--- a/booking.html
+++ b/booking.html
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-	<section id="intro">
+	<header>
 		<nav class="navbar navbar-expand-md navbar-light">
 			<div class="container-fluid">
 				<a class="navbar-brand" href="index.html">
@@ -49,13 +49,13 @@
 				</div>
 			</div>
 		</nav>
-	</section>
+	</header>
 
 	<section id="booking-second" style="background-image: url('images/bg.jpg')" ;>
 		<div class="container">
 			<form name="theForm" class="form" method="post" action="booking.php">
 				<div class="row justify-content-center">
-					<h2>請輸入訂購資料</h2>
+					<h1>請輸入訂購資料</h1>
 				</div>
 				<label>取餐方式:</label>
 				<div class="form-check-inline ">
@@ -109,14 +109,14 @@
 		<footer>
 			<div class="container">
 				<div class="row">
-					<div class="col-4">
+					<nav class="col-4">
 						<p>連結</p>
 						<div class="btn-group-vertical">
 							<a href="index.html">關於龍品</a>
 							<a href="product.html">產品介紹</a>
 							<a href="booking.html">線上訂餐</a>
 						</div>
-					</div>
+					</nav>
 					<div class="col">
 						<p>聯絡我們</p>
 						<p>台中市北區北平路二段68之1號<br>tel:(04)2291-8106</p>
