--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-  <section id="intro">
+  <header>
     <nav class="navbar navbar-expand-md navbar-light">
       <div class="container-fluid">
         <a class="navbar-brand" href="index.html">
@@ -45,14 +45,14 @@
         </div>
       </div>
     </nav>
-  </section>
+  </header>
 
   <section id="index-second">
     <div class="w3-display-container">
       <img src="images\15.jpg" class="img-fluid" alt="龍品快餐店">
       <div class="w3-display-middle ">
-        <p class="title">關於龍品</p>
-        <p>二十多年用心經營，台中人首選的好味道</p>
+        <h1>關於龍品</h1>
+        <h4>二十多年用心經營，台中人首選的好味道</h4>
       </div>
     </div>
   </section>
@@ -63,14 +63,14 @@
         <div class="col">
           <a href="javascript:void(0)" onclick="openMenu(event, 'business');" id="myLink">
             <div class="tablink">
-              <p class="title">經營理念</p>
+              <h5>經營理念</h5>
             </div>
           </a>
         </div>
         <div class="col">
           <a href="javascript:void(0)" onclick="openMenu(event, 'history');">
             <div class=" tablink">
-              <p class="title">歷史起源</p>
+              <h5>歷史起源</h5>
             </div>
           </a>
         </div>
@@ -79,14 +79,14 @@
       <div id="business" class="container-fluid menu w3-card">
         <div class="container">
           <div class="row">
-            <div class="col-md-6">
-              <p>
+            <article class="col-md-6">
+              <h6>
                 遵循古法、口味道地、食材保證新鮮</br>
                 －讓您 吃的更安心</br>
                 服務用心</br>
                 －您的滿意，就是我們追求的信念
-              </p>
-            </div>
+              </h6>
+            </article>
             <div class="col-md-6">
               <img class="img-fluid" src="images\business.jpeg">
             </div>
@@ -100,11 +100,11 @@
             <div calss="col-sm-12 col-lg-6">
               <img class="img-fluid" src="images\history.jpg">
             </div>
-            <div class="col-sm-12 col-lg-6">
-              <p>
+            <article class="col-sm-12 col-lg-6">
+              <h6>
                 創始店名為"龍品魚丸店"，創立於民國八十三年，在台中已好幾家分店的龍品魚丸店，而且在網路上相當高名氣與好評，不少部落客和網友都直稱這家是台中便當界美食，且經常店門口都會排上一場串人龍，就能知道民眾的受歡迎程度。龍品快餐店則是加盟店，但與創始店龍品魚丸店有所不同，快餐店雖為加盟店，但經營方式以及食材的烹煮都是老闆與老闆娘自行烹調，僅與魚丸店拿取蝦漿的食材原料，因此取龍品之名。
-              </p>
-            </div>
+              </h6>
+            </article>
           </div>
         </div>
       </div>
@@ -114,7 +114,7 @@
   <section id="index-fourth">
     <div class="container text-align">
       <div class="row justify-content-center iframe-rwd">
-        <p class="title">我們的位置</p>
+        <h4>我們的位置</h4>
         <iframe
           src='https://maps.google.com.tw/maps?f=q&hl=zh-TW&geocode=&q=台中市北區北平路二段68之1號&z=16&output=embed&t='></iframe>
         <p>營業時間:週一至週六AM11:00-PM8:00</p>
@@ -122,26 +122,24 @@
     </div>
   </section>
 
-  <section id="index-latest">
-    <footer>
-      <div class="container">
-        <div class="row">
-          <div class="col-4">
-            <p>連結</p>
-            <div class="btn-group-vertical">
-              <a href="index.html">關於龍品</a>
-              <a href="product.html">產品介紹</a>
-              <a href="booking.html">線上訂餐</a>
-            </div>
+  <footer>
+    <div class="container">
+      <div class="row">
+        <nav class="col-4">
+          <p>連結</p>
+          <div class="btn-group-vertical">
+            <a href="index.html">關於龍品</a>
+            <a href="product.html">產品介紹</a>
+            <a href="booking.html">線上訂餐</a>
           </div>
-          <div class="col">
-            <p>聯絡我們</p>
-            <p>台中市北區北平路二段68之1號<br>tel:(04)2291-8106</p>
-          </div>
+        </nav>
+        <div class="col">
+          <p>聯絡我們</p>
+          <p>台中市北區北平路二段68之1號<br>tel:(04)2291-8106</p>
         </div>
       </div>
-    </footer>
-  </section>
+    </div>
+  </footer>
 
   <script>
     // Tabbed Menu
