--- a/product.html
+++ b/product.html
@@ -34,7 +34,7 @@
 							<a class="nav-link" href="product.html">產品介紹</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="booking.html">線上訂餐</a>
+							<a class="nav-link" href="orderInformation.html">線上訂餐</a>
 						</li>
 					</ul>
 					<span class="navbar-text">
@@ -232,7 +232,7 @@
 					<div class="btn-group-vertical">
 						<a href="index.html">關於龍品</a>
 						<a href="product.html">產品介紹</a>
-						<a href="booking.html">線上訂餐</a>
+						<a href="orderInformation.html">線上訂餐</a>
 					</div>
 				</nav>
 				<div class="col">
